chore: fmt project
